--- a/SVD/.classpath
+++ b/SVD/.classpath
@@ -2,8 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/colt/lib/concurrent.jar"/>
-	<classpathentry kind="lib" path="C:/colt/lib/colt.jar"/>
-	<classpathentry kind="lib" path="C:/Documents and Settings/student/Pulpit/Jama-1.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Documents and Settings/student/Moje dokumenty/Downloads/Jama-1.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
